--- a/src/assets/styles/core/_variables.scss
+++ b/src/assets/styles/core/_variables.scss
@@ -41,7 +41,7 @@ $expanse-md: calc(2vw + 1rem) !default;
 $expanse-lg: calc(4vw + 1rem) !default;
 $expanse-xl: calc(4vw + 2rem) !default;
 
-$expanse-lg-neg: calc((4vw + 1rem) * -1) !default;
+$expanse-md-neg: calc((2vw + 1rem) * -1) !default;
 
 $canvas: 50vw !default;
 
